# auradb

./: .gitignore  AuraDB.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  deny.toml  docker-compose.cluster.yml  docker-compose.secure.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: bench.yml  ci.yml  cluster.yml  conformance.yml  docker.yml  release.yml  security.yml
benches/baseline/: README.md  v0.2.1.json  v0.3.0.json  v0.3.1.json  v0.4.0.json  v0.4.1.json  v0.5.0.json  v0.5.1.json  v0.6.0.json  v0.6.1.json  v0.6.2.json  v0.8.0.json  v0.8.1.json  v0.9.0.json  v0.9.1.json  v0.9.2.json  v1.0.0.json  v1.0.1.json  v1.1.0.json  v1.2.0.json  v1.3.0.json
crates/auradb/: Cargo.toml
crates/auradb-cli/: Cargo.toml
crates/auradb-cli/src/: cluster.rs  lib.rs  main.rs  search_eval.rs
crates/auradb-cli/tests/: aggregate_backup_restore.rs  backup_drills.rs  backup_restore.rs  backup_restore_edge_cases.rs  check.rs  cluster_cli.rs  cluster_diagnostics.rs  large_dataset.rs  peer_tls_cluster.rs  preview_guardrails.rs  production_drills_cli.rs  search_analyzers_cli.rs  search_relevance_cli.rs  upgrade_to_v0_8_0.rs  vector_eval.rs
crates/auradb-cluster/: Cargo.toml
crates/auradb-cluster/benches/: cluster_status.rs
crates/auradb-cluster/src/: config.rs  error.rs  id.rs  lib.rs  metadata.rs  role.rs
crates/auradb-cluster/tests/: metadata_corruption.rs
crates/auradb-conformance/: Cargo.toml
crates/auradb-conformance/src/: client.rs  lib.rs  scenarios.rs
crates/auradb-conformance/tests/: conformance.rs
crates/auradb-core/: Cargo.toml
crates/auradb-core/src/: capability.rs  clock.rs  error.rs  ids.rs  lib.rs  record.rs  schema.rs  value.rs
crates/auradb-index/: Cargo.toml
crates/auradb-index/src/: analyzer.rs  hnsw.rs  lib.rs  metric.rs  persist.rs
crates/auradb-observability/: Cargo.toml
crates/auradb-observability/src/: lib.rs  metrics.rs
crates/auradb-protocol/: Cargo.toml
crates/auradb-protocol/benches/: protocol.rs
crates/auradb-protocol/src/: frame.rs  lib.rs  message.rs  opcode.rs
crates/auradb-protocol/tests/: fuzz.rs
crates/auradb-query/: Cargo.toml
crates/auradb-query/src/: aggregate.rs  cursor.rs  eval.rs  exec.rs  ir.rs  lib.rs  migrate.rs  plan.rs  planner.rs  relevance.rs  snippet.rs  stats.rs
crates/auradb-query/tests/: relevance_metrics.rs
crates/auradb-raft/: Cargo.toml
crates/auradb-raft/benches/: raft.rs
crates/auradb-raft/src/: error.rs  lib.rs  log.rs  node.rs  sim.rs  storage.rs
crates/auradb-raft/tests/: consensus.rs
crates/auradb-replication/: Cargo.toml
crates/auradb-replication/benches/: cluster_overhead.rs  peer_transport.rs  replication.rs
crates/auradb-replication/src/: apply.rs  command.rs  error.rs  lib.rs  multi.rs  node.rs  snapshot.rs  transport.rs
crates/auradb-replication/tests/: multi_node.rs  replicated_apply.rs
crates/auradb-server/: Cargo.toml
crates/auradb-server/benches/: cursor.rs
crates/auradb-server/src/: auth.rs  cluster_runtime.rs  config.rs  cursor.rs  dispatch.rs  lib.rs  server.rs  tls.rs  wire.rs
crates/auradb-server/tests/: auth.rs  cluster_preview.rs  integration.rs  limits.rs  not_leader.rs  peer_tls.rs  search_metrics.rs  search_page.rs  tls.rs
crates/auradb-storage/: Cargo.toml
crates/auradb-storage/src/: catalog.rs  format.rs  lib.rs  manifest.rs
crates/auradb-storage/tests/: recovery.rs
crates/auradb-txn/: Cargo.toml
crates/auradb-txn/src/: lib.rs
crates/auradb/benches/: explain_analyze.rs  mvcc.rs  planner.rs  query.rs  storage.rs  vector.rs
crates/auradb/examples/: embedded.rs
crates/auradb/src/: clock.rs  engine.rs  idgen.rs  lib.rs
crates/auradb/tests/: aggregate_facets.rs  ann_durability.rs  ann_preview.rs  chaos_restart.rs  document_path_index.rs  engine.rs  exact_vector.rs  explain_analyze_fields.rs  explain_profile.rs  full_text.rs  gc_validation.rs  group_by.rs  mvcc.rs  persisted_indexes.rs  planner.rs  planner_regression.rs  query_timeout.rs  ranked_cursor.rs  recovery.rs  search_analyzers_live.rs  search_ranking.rs  search_relevance.rs  transaction_lifecycle.rs  transactions.rs  upgrade_to_v0_3_1.rs  upgrade_to_v0_4_0.rs  upgrade_to_v0_4_1.rs  upgrade_v0_1_0.rs  upgrade_v0_2_x.rs
docs/: ARCHITECTURE.md  AURA_CONNECTOR_COMPATIBILITY.md  BACKUP_RESTORE.md  BENCHMARKS.md  CLI.md  CLUSTERING.md  CLUSTER_TROUBLESHOOTING.md  COMPATIBILITY.md  CONFIGURATION.md  CONFORMANCE.md  CURSORS.md  DECISIONS.md  DEPLOYMENT.md  DOCUMENTS.md  FULL_TEXT.md  HA_RELEASE_CANDIDATE.md  INDEXING.md  OBSERVABILITY.md  OPERATIONS.md  PRODUCTION_READINESS.md  PROTOCOL.md  QUERY_ENGINE.md  RAFT.md  RELATIONSHIPS.md  RELEASE.md  REPLICATION.md  ROADMAP.md  RUNBOOKS.md  SEARCH_AND_RANKING.md  SECURITY.md  STORAGE_ENGINE.md  SUPPORT_POLICY.md  TESTING.md  TRANSACTIONS.md  UPGRADING.md  V0_2_RELEASE_NOTES.md  V0_3_1_RELEASE_NOTES.md  V0_3_RELEASE_NOTES.md  V0_4_1_RELEASE_NOTES.md  V0_4_RELEASE_NOTES.md  (+24 more)
examples/: auradb.cluster.local.toml  auradb.local.toml  auradb.secure.toml  auradb.toml  search_bm25.json  search_hybrid.json
examples/cluster/: .gitignore  README.md  generate-dev-certs.ps1  generate-dev-certs.sh  node1.toml  node2.toml  node3.toml  python_connector.py
examples/cluster/docker/: node1.toml  node2.toml  node3.toml
examples/production/: README.md  auradb.toml
examples/production/certs/: README.md
fixtures/relevance/: README.md  analyzer_corpus.jsonl  analyzer_qrels.jsonl  analyzer_queries.jsonl  small_corpus.jsonl  small_qrels.jsonl  small_queries.jsonl
scripts/: compare_benchmarks.py  smoke_cluster_compose.sh  smoke_cluster_loopback.sh  smoke_cluster_search_analytics.sh  smoke_ha_candidate.sh  smoke_single_node_production_drills.sh  soak_cluster_preview.sh  soak_single_node.sh  verify_release_artifacts.sh
tests/: README.md
tests/conformance/python/: README.md  _conformance_isolation.py  run_conformance.py  run_connector_analyzers.py  run_connector_ann_preview.py  run_connector_cluster.py  run_connector_conformance.py  (+14 more)
tests/fixtures/: README.md
(+13 files in other folders)
