[workspace]
resolver = "2"
members = [
    "crates/auradb-core",
    "crates/auradb-protocol",
    "crates/auradb-storage",
    "crates/auradb-index",
    "crates/auradb-txn",
    "crates/auradb-query",
    "crates/auradb",
    "crates/auradb-observability",
    "crates/auradb-cluster",
    "crates/auradb-raft",
    "crates/auradb-replication",
    "crates/auradb-server",
    "crates/auradb-cli",
    "crates/auradb-conformance",
]

[workspace.package]
version = "1.5.1"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/Ohswedd/auradb"
authors = ["AuraDB Contributors"]
description = "A single-node, Rust-native multi-model database server for the Aura ecosystem."

[workspace.dependencies]
auradb-core = { path = "crates/auradb-core", version = "1.5.1" }
auradb-protocol = { path = "crates/auradb-protocol", version = "1.5.1" }
auradb-storage = { path = "crates/auradb-storage", version = "1.5.1" }
auradb-index = { path = "crates/auradb-index", version = "1.5.1" }
auradb-txn = { path = "crates/auradb-txn", version = "1.5.1" }
auradb-query = { path = "crates/auradb-query", version = "1.5.1" }
auradb = { path = "crates/auradb", version = "1.5.1" }
auradb-observability = { path = "crates/auradb-observability", version = "1.5.1" }
auradb-cluster = { path = "crates/auradb-cluster", version = "1.5.1" }
auradb-raft = { path = "crates/auradb-raft", version = "1.5.1" }
auradb-replication = { path = "crates/auradb-replication", version = "1.5.1" }
auradb-server = { path = "crates/auradb-server", version = "1.5.1" }
auradb-conformance = { path = "crates/auradb-conformance", version = "1.5.1" }

tokio = { version = "1", features = ["full"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
toml = "1.1"
crc32fast = "1"
tempfile = "3"
criterion = "0.8"
proptest = "1"

# Security: authentication (Argon2id password hashing) and TLS (rustls).
argon2 = "0.5"
rand = "0.8"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls-pemfile = "2"
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
rpassword = "7"

[profile.release]
lto = "thin"
codegen-units = 1
