[package]
name = "auradb-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "The AuraDB command-line interface."

[[bin]]
name = "auradb"
path = "src/main.rs"

[dependencies]
auradb-core = { workspace = true }
auradb = { workspace = true }
auradb-server = { workspace = true }
auradb-observability = { workspace = true }
auradb-conformance = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
