[package]
name = "auradb-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "The AuraDB command-line interface."

[[bin]]
name = "auradb"
path = "src/main.rs"
bench = false

[dependencies]
auradb-core = { workspace = true }
auradb-protocol = { workspace = true }
auradb = { workspace = true }
auradb-server = { workspace = true }
auradb-observability = { workspace = true }
auradb-conformance = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
rcgen = { workspace = true }
rustls-pemfile = { workspace = true }
rpassword = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lib]
bench = false
