[package]
name = "auradb-conformance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "AuraDB conformance harness: a protocol client and scenario suite."

[dependencies]
auradb-core = { workspace = true }
auradb-protocol = { workspace = true }
auradb = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
auradb-server = { workspace = true }
tempfile = { workspace = true }

[lib]
bench = false
