[package]
name = "auradb-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "AuraDB indexes: primary, unique, secondary, and exact vector search."

[dependencies]
auradb-core = { workspace = true }
serde_json = { workspace = true }
