[package]
name = "auradb-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "AuraDB indexes: primary, unique, secondary, document-path, full-text, and exact vector search."

[dependencies]
auradb-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crc32fast = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lib]
bench = false
