[package]
name = "auradb-query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "AuraDB Query IR types, executor, EXPLAIN, and migration estimation."

[dependencies]
auradb-core = { workspace = true }
auradb-storage = { workspace = true }
auradb-index = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lib]
bench = false
