[package]
name = "auradb-raft"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "A minimal, deterministic Raft log and consensus core for AuraDB."

[dependencies]
auradb-cluster.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
crc32fast.workspace = true

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "raft"
harness = false

[lib]
bench = false
