[package]
name = "auradb-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "AuraDB network server: AWP listener, dispatch, and server-side cursors."

[dependencies]
auradb-core = { workspace = true }
auradb-protocol = { workspace = true }
auradb-observability = { workspace = true }
auradb = { workspace = true }
auradb-cluster = { workspace = true }
auradb-raft = { workspace = true }
auradb-replication = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
rcgen = { workspace = true }
auradb-storage = { workspace = true }

[[bench]]
name = "cursor"
harness = false

[lib]
bench = false
